Android Visual update

--- a/app/src/main/res/layout-land/activity_add_child.xml
+++ b/app/src/main/res/layout-land/activity_add_child.xml
@@ -4,50 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorLightBlue"
+    android:background="@drawable/gradient"
     tools:context=".ui.addChild.AddChildActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorLightBlue"
+        android:background="#00000000"
         tools:context=".ui.addChild.AddChildActivity">
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
+            android:id="@+id/title2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="75dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginTop="44dp"
             android:gravity="center_horizontal"
-            android:text="@string/messageChildSecretCode"
-            android:textColor="@color/colorDarkBlue"
-            android:textSize="30sp"
+            android:text="@string/messageChildSecretCodeAdd"
+            android:textAlignment="textStart"
+            android:textColor="@color/colorWhite"
+            android:textSize="60sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:gravity="center_horizontal"
+            android:text="@string/messageChildSecretCodeSecondPart"
+            android:textAlignment="textStart"
+            android:textColor="@color/colorWhite"
+            android:textSize="36sp"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title2" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewLogin"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            app:cardBackgroundColor="@color/colorWhite"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="60dp"
+            app:cardBackgroundColor="#00000000"
             app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
@@ -56,33 +65,30 @@
 
                 <EditText
                     android:id="@+id/childLogin"
-                    android:layout_width="match_parent"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
                     android:ems="10"
                     android:hint="@string/childLogin"
-                    android:inputType="textPassword"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textColorHint="@color/colorDarkBlue" />
+                    android:inputType="textPassword" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewPassword"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            app:cardBackgroundColor="@color/colorWhite"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="60dp"
+            app:cardBackgroundColor="#00000000"
             app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardViewLogin">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
@@ -91,14 +97,12 @@
 
                 <EditText
                     android:id="@+id/childPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
                     android:autofillHints=""
                     android:ems="10"
                     android:hint="@string/childPassword"
-                    android:inputType="textPassword"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textColorHint="@color/colorDarkBlue" />
+                    android:inputType="textPassword" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -106,11 +110,11 @@
             android:id="@+id/childAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/addChild"
-            android:textColor="@color/colorDarkBlue"
+            android:layout_marginTop="16dp"
+            android:text="@string/addTheChild"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.936"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardViewPassword" />
 
