--- a/app/src/main/res/layout/activity_add_child.xml
+++ b/app/src/main/res/layout/activity_add_child.xml
@@ -4,43 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorLightBlue"
+    android:background="@drawable/gradient"
     tools:context=".ui.addChild.AddChildActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorLightBlue"
+        android:background="#00000000"
         tools:context=".ui.addChild.AddChildActivity">
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
+            android:id="@+id/title2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="44dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
             android:gravity="center_horizontal"
-            android:text="@string/messageChildSecretCode"
-            android:textColor="@color/colorDarkBlue"
-            android:textSize="30sp"
+            android:text="@string/messageChildSecretCodeAdd"
+            android:textAlignment="textStart"
+            android:textColor="@color/colorWhite"
+            android:textSize="60sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.072"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center_horizontal"
+            android:text="@string/messageChildSecretCodeSecondPart"
+            android:textAlignment="textStart"
+            android:textColor="@color/colorWhite"
+            android:textSize="36sp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.077"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title2" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="60dp"
             android:layout_marginRight="20dp"
-            app:cardBackgroundColor="@color/colorWhite"
+            app:cardBackgroundColor="#00000000"
             app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title">
@@ -56,14 +73,12 @@
 
                 <EditText
                     android:id="@+id/childLogin"
-                    android:layout_width="match_parent"
+                    android:layout_width="404dp"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
                     android:ems="10"
                     android:hint="@string/childLogin"
-                    android:inputType="textPassword"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textColorHint="@color/colorDarkBlue" />
+                    android:inputType="textPassword" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -74,8 +89,9 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            app:cardBackgroundColor="@color/colorWhite"
+            app:cardBackgroundColor="#00000000"
             app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardViewLogin">
@@ -91,14 +107,12 @@
 
                 <EditText
                     android:id="@+id/childPassword"
-                    android:layout_width="match_parent"
+                    android:layout_width="395dp"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
                     android:ems="10"
                     android:hint="@string/childPassword"
-                    android:inputType="textPassword"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textColorHint="@color/colorDarkBlue" />
+                    android:inputType="textPassword" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -106,11 +120,11 @@
             android:id="@+id/childAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:text="@string/addTheChild"
-            android:textColor="@color/colorDarkBlue"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.936"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardViewPassword" />
     </androidx.constraintlayout.widget.ConstraintLayout>
