--- a/app/src/main/res/layout/activity_pupil_choosing.xml
+++ b/app/src/main/res/layout/activity_pupil_choosing.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#28C7FA"
+    android:background="@drawable/gradient"
     tools:context=".ui.test.TestFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_marginStart="20dp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -24,7 +24,7 @@
             android:layout_marginBottom="20dp"
             android:gravity="center_horizontal"
             android:text="@string/chooseChild"
-            android:textColor="@color/colorDarkBlue"
+            android:textColor="@color/colorWhite"
             android:textSize="40sp"
             android:textStyle="bold" />
 
@@ -41,7 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/addChild"
-            android:textColor="@color/colorDarkBlue"
             android:textSize="25sp" />
 
     </LinearLayout>
