--- a/app/src/main/res/layout/list_child.xml
+++ b/app/src/main/res/layout/list_child.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    app:cardBackgroundColor="@color/colorWhite"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
