--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#002651</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">@color/colorLightBlue</color>
+    <color name="colorPrimaryDark">@color/colorDarkBlue</color>
+    <color name="colorAccent">@color/colorLightBlue</color>
 
     <color name="colorPink">#FF304F</color>
     <color name="colorDarkBlue">#002651</color>
     <color name="colorLightBlue">#28c7fa</color>
     <color name="colorWhite">#efecec</color>
+    <color name="colorWhiteFaded">#77efecec</color>
 </resources>
