--- a/app/src/main/res/layout/fragment_report_card.xml
+++ b/app/src/main/res/layout/fragment_report_card.xml
@@ -93,7 +93,7 @@
                 android:layout_marginEnd="20dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="20dp"
